Refactoring and restructuring the code

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -1,10 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "At the moment, the script works with only one card set at a time.  Set the card set UUID:"
+    "import lotr"
    ]
   },
   {
@@ -13,333 +15,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SET_UUID = '8a3273ca-1ccd-4e07-913b-766fcc49fe6f'\n",
-    "#SET_UUID = '17b90ca1-7e3e-4891-99da-954a7833e88e'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Set whether you want to generate all cards from scratch (`True`) or to update only the cards, changed since the previous script run (`False`):"
+    "conf = lotr.read_conf()\n",
+    "sheet_path = lotr.download_sheet(conf)\n",
+    "sets = lotr.get_sets(conf, sheet_path)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing set ID 8a3273ca-1ccd-4e07-913b-766fcc49fe6f\n",
+      "Processing set ID 17b90ca1-7e3e-4891-99da-954a7833e88e\n"
+     ]
+    }
+   ],
    "source": [
-    "FROM_SCRATCH = True"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Run the cells below:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import hashlib\n",
-    "import math\n",
-    "import os\n",
-    "import py7zr\n",
-    "import re\n",
-    "import requests\n",
-    "import shutil\n",
-    "import subprocess\n",
-    "import xlwings as xw\n",
-    "import xml.etree.ElementTree as ET\n",
-    "import yaml\n",
-    "import zipfile\n",
-    "\n",
-    "from reportlab.lib.pagesizes import landscape, letter, A4\n",
-    "from reportlab.lib.units import inch\n",
-    "from reportlab.lib.utils import ImageReader\n",
-    "from reportlab.pdfgen.canvas import Canvas\n",
-    "\n",
-    "PROJECT_FOLDER = 'Frogmorton'\n",
-    "SHEET_NAME = 'setExcel'\n",
-    "\n",
-    "CONFIGURATION_PATH = 'configuration.yaml'\n",
-    "IMAGES_BACK_PATH = 'imagesBack'\n",
-    "IMAGES_EONS_PATH = 'imagesEons'\n",
-    "IMAGES_RAW_PATH = os.path.join(PROJECT_FOLDER, 'imagesRaw')\n",
-    "IMAGES_ZIP_PATH = '{}/Export/'.format(os.path.split(PROJECT_FOLDER)[-1])\n",
-    "MACROS_PATH = 'macros.xlsm'\n",
-    "MACROS_COPY_PATH = 'macros_copy.xlsm'\n",
-    "OCTGN_ZIP_PATH = 'imagesOCTGN/a21af4e8-be4b-4cda-a6b6-534f9717391f/Sets'\n",
-    "OUTPUT_DB_PATH = os.path.join('Output', 'DB')\n",
-    "OUTPUT_MPC_PATH = os.path.join('Output', 'MakePlayingCards')\n",
-    "OUTPUT_OCTGN_PATH = os.path.join('Output', 'OCTGN')\n",
-    "OUTPUT_PDF_PATH = os.path.join('Output', 'PDF')\n",
-    "PROJECT_PATH = 'setGenerator.seproject'\n",
-    "SET_EONS_PATH = 'setEons'\n",
-    "TEMP_PATH = 'Temp'\n",
-    "XML_PATH = os.path.join(PROJECT_FOLDER, 'XML')"
+    "for set_data in sets:\n",
+    "    set_id, set_name, set_row = set_data\n",
+    "    print('Processing set ID {}'.format(set_id))\n",
+    "    lotr.backup_previous_xml(conf, set_id)\n",
+    "    lotr.generate_xmls(sheet_path, set_row)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read configuration\n",
-    "with open(CONFIGURATION_PATH, 'r') as f_conf:\n",
-    "    conf = yaml.safe_load(f_conf)\n",
-    "\n",
-    "if os.path.exists(os.path.join(conf['artwork_path'], SET_UUID)):\n",
-    "    artwork_path = os.path.join(conf['artwork_path'], SET_UUID)\n",
-    "else:\n",
-    "    artwork_path = conf['artwork_path']"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Download the cards spreadsheet from Google Drive\n",
-    "sheet_path = '{}.{}'.format(SHEET_NAME, conf['sheet_type'])\n",
-    "if conf['sheet_type'] == 'xlsm':\n",
-    "    url = 'https://drive.google.com/uc?export=download&id={}'.format(conf['sheet_gdid'])\n",
-    "else:\n",
-    "    url = 'https://docs.google.com/spreadsheets/d/{}/export?format=xlsx'.format(conf['sheet_gdid'])\n",
-    "\n",
-    "with open(sheet_path, 'wb') as f_sheet:\n",
-    "    f_sheet.write(requests.get(url).content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Backup the previous setEons.xml\n",
-    "if os.path.exists(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml')):\n",
-    "    _ = shutil.move(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml'),\n",
-    "                os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml.old'))\n",
-    "\n",
-    "if FROM_SCRATCH and os.path.exists(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml.old')):\n",
-    "    os.remove(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml.old'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Copy Excel Sheet over to sheet that contains the macros, and run the macros.\n",
-    "# This will create two .xml files. One in the setEons folder called setEons.xml,\n",
-    "# which contains the card data needed by Strange Eons.\n",
-    "# The second will be placed in the Output/OCTGN folder, which should be copied over to your OCTGN folder.\n",
-    "\n",
-    "card_data_range = 'A2:AU1001'\n",
-    "\n",
-    "_ = shutil.copyfile(MACROS_PATH, MACROS_COPY_PATH)\n",
-    "\n",
-    "set_name = None\n",
-    "\n",
-    "app = xw.App(visible=False)  # if you want Excel to run in background\n",
-    "xlws = {}\n",
-    "\n",
-    "xlwb1 = xw.Book(sheet_path)\n",
-    "try:\n",
-    "    xlws['ws1a'] = xlwb1.sheets['Sets']\n",
-    "    xlws['ws1b'] = xlwb1.sheets['Card Data']\n",
-    "\n",
-    "    set_row = None\n",
-    "    for row in range(3, 102):\n",
-    "        if xlws['ws1a'].range((row, 1)).value == SET_UUID:\n",
-    "            set_row = row\n",
-    "            set_name = xlws['ws1a'].range((row, 2)).value\n",
-    "            break\n",
-    "\n",
-    "    if set_row:\n",
-    "        \n",
-    "        xlwb2 = xw.Book(MACROS_COPY_PATH)\n",
-    "        try:\n",
-    "            xlws['ws2a'] = xlwb2.sheets['Sets']\n",
-    "            xlws['ws2b'] = xlwb2.sheets['Card Data']\n",
-    "\n",
-    "            newVal = xlws['ws1a'].range('A{}:B{}'.format(set_row, set_row)).value  # get set id/name\n",
-    "            xlws['ws2a'].range('A3:B3').value = newVal  # update set id/name\n",
-    "\n",
-    "            newVal = xlws['ws1b'].range(card_data_range).value  # get card data\n",
-    "            xlws['ws2b'].range(card_data_range).value = newVal  # update card data\n",
-    "\n",
-    "            xlws['ws2b'].range(card_data_range).api.Sort(\n",
-    "                Key1=xlws['ws2b'].range('Set').api,\n",
-    "                Order1=xw.constants.SortOrder.xlAscending,\n",
-    "                Key2=xlws['ws2b'].range('CardNumber').api,\n",
-    "                Order2=xw.constants.SortOrder.xlAscending)\n",
-    "\n",
-    "            # This macro will generate a folder under Output/OCTGN, which should be copied over\n",
-    "            # to OCTGN/GameDatabase/a21af4e8-be4b-4cda-a6b6-534f9717391f/Sets \n",
-    "            macro1 = xlwb2.macro('SaveOCTGN')\n",
-    "            macro1()\n",
-    "\n",
-    "            # This macro will generate a file called setEons.xml, which is used by the Strange Eons script.\n",
-    "            macro2 = xlwb2.macro('SaveXML')\n",
-    "            macro2()\n",
-    "\n",
-    "            xlwb2.save()\n",
-    "        finally:\n",
-    "            xlwb2.close()\n",
-    "    else:\n",
-    "        print('Set {} not found in the spreadsheet'.format(SET_UUID))    \n",
-    "finally:\n",
-    "    xlwb1.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Find properties with a given name\n",
-    "def find_properties(parent, name):\n",
-    "    return [p for p in parent if p.attrib.get('name') == name]\n",
-    "\n",
-    "# Get new or existing property with a given name\n",
-    "def get_property(parent, name):\n",
-    "    properties = find_properties(parent, name)\n",
-    "    if properties:\n",
-    "        prop = properties[0]\n",
-    "    else:\n",
-    "        prop = ET.SubElement(parent, 'property')\n",
-    "        prop.set('name', name)\n",
-    "\n",
-    "    return prop\n",
-    "\n",
-    "# Clear the folder\n",
-    "def clear_folder(folder):\n",
-    "    for _, _, filenames in os.walk(folder):\n",
-    "        for filename in filenames:\n",
-    "            if filename not in ('seproject', '.gitignore'):\n",
-    "                os.remove(os.path.join(folder, filename))\n",
-    "\n",
-    "        break\n",
-    "\n",
-    "# Clear raw image files in the project folder\n",
-    "clear_folder(IMAGES_RAW_PATH)\n",
-    "\n",
-    "# Parse artwork images\n",
-    "images = {}\n",
-    "for _, _, filenames in os.walk(artwork_path):\n",
-    "    for filename in filenames:\n",
-    "        if filename.split('.')[-1] in ('jpg', 'png'):\n",
-    "            card_id_side = '_'.join(filename.split('_')[:2])\n",
-    "            images[card_id_side] = filename\n",
-    "\n",
-    "    break\n",
-    "\n",
-    "# Update setEons.xml with artwork, artists and encounter set numbers\n",
-    "tree = ET.parse(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml'))\n",
-    "root = tree.getroot()\n",
-    "encounter_sets = {}\n",
-    "encounter_cards = {}\n",
-    "\n",
-    "for card in root[0]:\n",
-    "    card_type = find_properties(card, 'Type')[0].attrib['value']\n",
-    "    encounter_set = find_properties(card, 'Encounter Set')\n",
-    "    if card_type != 'Quest' and encounter_set:\n",
-    "        encounter_set = encounter_set[0].attrib['value']\n",
-    "        encounter_cards[card.attrib['id']] = encounter_set\n",
-    "        prop = get_property(card, 'Encounter Set Number')\n",
-    "        prop.set('value', str(encounter_sets.get(encounter_set, 0) + 1))\n",
-    "        quantity = int(find_properties(card, 'Quantity')[0].attrib['value'])\n",
-    "        encounter_sets[encounter_set] = encounter_sets.get(encounter_set, 0) + quantity\n",
-    "\n",
-    "    filename = images.get('{}_{}'.format(card.attrib['id'], 'A'))\n",
-    "    if filename:\n",
-    "        prop = get_property(card, 'Artwork')\n",
-    "        prop.set('value', filename)\n",
-    "        prop = get_property(card, 'Artwork Size')\n",
-    "        prop.set('value', str(os.path.getsize(os.path.join(artwork_path, filename))))\n",
-    "        prop = get_property(card, 'Artwork Modified')\n",
-    "        prop.set('value', str(int(os.path.getmtime(os.path.join(artwork_path, filename)))))\n",
-    "\n",
-    "        artist = find_properties(card, 'Artist')\n",
-    "        if not artist and '_Artist_' in filename:\n",
-    "            artist_value = '.'.join('_Artist_'.join(\n",
-    "                filename.split('_Artist_')[1:]).split('.')[:-1]).replace('_', ' ')\n",
-    "            prop = get_property(card, 'Artist')\n",
-    "            prop.set('value', artist_value)\n",
-    "\n",
-    "    filename = images.get('{}_{}'.format(card.attrib['id'], 'B'))\n",
-    "    alternate = [a for a in card if a.attrib.get('type') == 'B']\n",
-    "    if filename and alternate:\n",
-    "        alternate = alternate[0]\n",
-    "        prop = get_property(alternate, 'Artwork')\n",
-    "        prop.set('value', filename)\n",
-    "        prop = get_property(alternate, 'Artwork Size')\n",
-    "        prop.set('value', str(os.path.getsize(os.path.join(artwork_path, filename))))\n",
-    "        prop = get_property(alternate, 'Artwork Modified')\n",
-    "        prop.set('value', str(int(os.path.getmtime(os.path.join(artwork_path, filename)))))\n",
-    "\n",
-    "        artist = find_properties(alternate, 'Artist')\n",
-    "        if not artist and '_Artist_' in filename:\n",
-    "            artist_value = '.'.join('_Artist_'.join(\n",
-    "                filename.split('_Artist_')[1:]).split('.')[:-1]).replace('_', ' ')\n",
-    "            prop = get_property(alternate, 'Artist')\n",
-    "            prop.set('value', artist_value)\n",
-    "\n",
-    "# Update setEons.xml with encounter set total and card hash\n",
-    "for card in root[0]:\n",
-    "    if card.attrib['id'] in encounter_cards:\n",
-    "        prop = get_property(card, 'Encounter Set Total')\n",
-    "        prop.set('value', str(encounter_sets[encounter_cards[card.attrib['id']]]))\n",
-    "\n",
-    "    card_hash = hashlib.md5(re.sub('\\n\\s*', '', ET.tostring(card, encoding='unicode').strip()).encode()).hexdigest()\n",
-    "    card.set('hash', card_hash)\n",
-    "\n",
-    "# Mark cards, which were not changed since the previous script run and copy artwork images into the project\n",
-    "old_hashes = {}\n",
-    "skip_ids = set()\n",
-    "if os.path.exists(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml.old')):\n",
-    "    tree_old = ET.parse(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml.old'))\n",
-    "    root_old = tree_old.getroot()\n",
-    "    for card in root_old[0]:\n",
-    "        old_hashes[card.attrib['id']] = card.attrib['hash']\n",
-    "\n",
-    "for card in root[0]:\n",
-    "    if old_hashes.get(card.attrib['id']) == card.attrib['hash']:\n",
-    "        skip_ids.add(card.attrib['id'])\n",
-    "        card.set('skip', '1')\n",
-    "    else:\n",
-    "        filename = find_properties(card, 'Artwork')\n",
-    "        if filename:\n",
-    "            filename = filename[0].attrib['value']\n",
-    "            _ = shutil.copyfile(os.path.join(artwork_path, filename),\n",
-    "                                os.path.join(IMAGES_RAW_PATH, filename))\n",
-    "\n",
-    "        alternate = [a for a in card if a.attrib.get('type') == 'B']\n",
-    "        if alternate:\n",
-    "            alternate = alternate[0]\n",
-    "            filename = find_properties(alternate, 'Artwork')\n",
-    "            if filename:\n",
-    "                filename = filename[0].attrib['value']\n",
-    "                _ = shutil.copyfile(os.path.join(artwork_path, filename),\n",
-    "                                    os.path.join(IMAGES_RAW_PATH, filename))\n",
-    "\n",
-    "tree.write(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,18 +159,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CompletedProcess(args='\"C:\\\\Program Files\\\\GIMP 2\\\\bin\\\\gimp-console-2.10.exe\" -i -b \"(python-prepare-pdf-back-folder 1 \\\\\"Temp\\\\\" \\\\\"imagesEons\\\\\\\\png300PDF\\\\\\\\8a3273ca-1ccd-4e07-913b-766fcc49fe6f\\\\\")\" -b \"(gimp-quit 0)\"', returncode=0, stdout=b'EEEEeEeek! 10 GeglBuffers leaked\\n', stderr=b'batch command executed successfully\\nC:\\\\Program Files\\\\GIMP 2\\\\bin\\\\gimp-console-2.10.exe: GEGL-WARNING: (../gegl/buffer/gegl-tile-handler-cache.c:1076):gegl_tile_cache_destroy: runtime check failed: (g_queue_is_empty (&cache_queue))\\nTo debug GeglBuffer leaks, set the environment variable GEGL_DEBUG to \"buffer-alloc\"\\n')\n",
-      "CompletedProcess(args='\"C:\\\\Program Files\\\\GIMP 2\\\\bin\\\\gimp-console-2.10.exe\" -i -b \"(python-prepare-pdf-front-folder 1 \\\\\"Temp\\\\\" \\\\\"imagesEons\\\\\\\\png300PDF\\\\\\\\8a3273ca-1ccd-4e07-913b-766fcc49fe6f\\\\\")\" -b \"(gimp-quit 0)\"', returncode=0, stdout=b'EEEEeEeek! 87 GeglBuffers leaked\\n', stderr=b'batch command executed successfully\\nC:\\\\Program Files\\\\GIMP 2\\\\bin\\\\gimp-console-2.10.exe: GEGL-WARNING: (../gegl/buffer/gegl-tile-handler-cache.c:1076):gegl_tile_cache_destroy: runtime check failed: (g_queue_is_empty (&cache_queue))\\nTo debug GeglBuffer leaks, set the environment variable GEGL_DEBUG to \"buffer-alloc\"\\n')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Generate images for PDF outputs\n",
     "output_path = os.path.join(IMAGES_EONS_PATH, 'png300PDF', SET_UUID)\n",
@@ -496,17 +208,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CompletedProcess(args='\"C:\\\\Program Files\\\\GIMP 2\\\\bin\\\\gimp-console-2.10.exe\" -i -b \"(python-prepare-makeplayingcards-folder 1 \\\\\"Temp\\\\\" \\\\\"imagesEons\\\\\\\\png800BleedMPC\\\\\\\\8a3273ca-1ccd-4e07-913b-766fcc49fe6f\\\\\")\" -b \"(gimp-quit 0)\"', returncode=0, stdout=b'EEEEeEeek! 101 GeglBuffers leaked\\n', stderr=b'batch command executed successfully\\nC:\\\\Program Files\\\\GIMP 2\\\\bin\\\\gimp-console-2.10.exe: GEGL-WARNING: (../gegl/buffer/gegl-tile-handler-cache.c:1076):gegl_tile_cache_destroy: runtime check failed: (g_queue_is_empty (&cache_queue))\\nTo debug GeglBuffer leaks, set the environment variable GEGL_DEBUG to \"buffer-alloc\"\\n')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Generate images for MakePlayingCards outputs\n",
     "output_path = os.path.join(IMAGES_EONS_PATH, 'png800BleedMPC', SET_UUID)\n",
