Create standalone Python scripts

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,20 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading project configuration\n",
-      "Clearing the project folders\n",
-      "Downloading cards spreadsheet from Google Drive\n",
-      "Getting all sets to work on\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "conf = lotr.read_conf()\n",
     "lotr.clear_project_folders()\n",
@@ -34,30 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing set ID 8a3273ca-1ccd-4e07-913b-766fcc49fe6f:\n",
-      "  Backing up a previous Strange Eons xml file\n",
-      "  Generating xml files for StrangeEons and OCTGN\n",
-      "  Updating the Strange Eons xml file with additional data\n",
-      "  Updating the Strange Eons xml file with hashes and skip flag\n",
-      "  Copying raw image files into the project folder\n",
-      "  Copying the Strange Eons xml file for the set into the project\n",
-      "Processing set ID 17b90ca1-7e3e-4891-99da-954a7833e88e:\n",
-      "  Backing up a previous Strange Eons xml file\n",
-      "  Generating xml files for StrangeEons and OCTGN\n",
-      "  Updating the Strange Eons xml file with additional data\n",
-      "  Updating the Strange Eons xml file with hashes and skip flag\n",
-      "  Copying raw image files into the project folder\n",
-      "  Copying the Strange Eons xml file for the set into the project\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for set_data in sets:\n",
     "    set_id, _, set_row = set_data\n",
@@ -72,17 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating a Strange Eons project archive\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lotr.create_project()"
    ]
@@ -91,21 +51,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Manual Strange Eons Part:\n",
+    "### Strange Eons Part:\n",
     "\n",
-    "1. Open `setGenerator.seproject` generated above.\n",
-    "2. Run `Script/makeCards` script by double clicking it.  This will take the templates, fill them with values from `xml` files and export results in all the required formats.\n",
-    "3. Once completed, close Strange Eons."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conf = lotr.read_conf()\n",
-    "sets = lotr.get_sets(conf)"
+    "1. Open `setGenerator.seproject` generated above in Strange Eons.\n",
+    "2. Run `Script/makeCards` script by double clicking it.\n",
+    "3. Once completed, close Strange Eons (wait until it finished packing the project)."
    ]
   },
   {
@@ -144,12 +94,12 @@
    "source": [
     "Now there should be the following outputs:\n",
     "\n",
-    "1. `Output/DB/<set name>/`: 300 dpi JPG images for general purposes.\n",
-    "2. `Output/MakePlayingCards/<set name>`: `zip` and `7z` archives of 800 dpi PNG images\n",
-    "    to be printed on MakePlayingCards.com.\n",
-    "3. `Output/OCTGN/<octgnid>/:` `set.xml` and `o8c` image pack (300 dpi JPG) for OCTGN.\n",
-    "    Add the latter using the \"Add Image Packs\" button from within OCTGN.\n",
-    "4. `Output/PDF/<set name>/`: PDF files in `A4` and `letter` format for home printing."
+    "- `Output/DB/<set name>/`: 300 dpi JPG images for general purposes.\n",
+    "- `Output/MakePlayingCards/<set name>`: `zip` and `7z` archives of 800 dpi PNG images\n",
+    "   to be printed on MakePlayingCards.com.\n",
+    "- `Output/OCTGN/<octgnid>/:` `set.xml` and `o8c` image pack (300 dpi JPG) for OCTGN.\n",
+    "   Add the latter using the \"Add Image Packs\" button from within OCTGN.\n",
+    "- `Output/PDF/<set name>/`: PDF files in `A4` and `letter` format for home printing."
    ]
   }
  ],
