--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "### Strange Eons Part:\n",
     "\n",
-    "1. Open `setGenerator.seproject` generated above in Strange Eons.\n",
+    "1. Open `setGenerator.seproject` in Strange Eons.\n",
     "2. Run `Script/makeCards` script by double clicking it.\n",
     "3. Once completed, close Strange Eons (wait until it finished packing the project)."
    ]
