Add DriveThruCards support

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -75,6 +75,8 @@
     "        lotr.generate_png300_pdf(conf, set_id, skip_ids)\n",
     "    if 'makeplayingcards' in conf['outputs']:\n",
     "        lotr.generate_png800_bleedmpc(conf, set_id, skip_ids)\n",
+    "    if 'drivethrucards' in conf['outputs']:\n",
+    "        lotr.generate_png300_bleeddtc(conf, set_id, skip_ids)\n",
     "\n",
     "    if 'db' in conf['outputs']:\n",
     "        lotr.generate_db(set_id, set_name)\n",
@@ -85,7 +87,11 @@
     "    if 'makeplayingcards_zip' in conf['outputs']:\n",
     "        lotr.generate_mpc_zip(set_id, set_name)\n",
     "    if 'makeplayingcards_7z' in conf['outputs']:\n",
-    "        lotr.generate_mpc_7z(set_id, set_name)"
+    "        lotr.generate_mpc_7z(set_id, set_name)\n",
+    "    if 'drivethrucards_zip' in conf['outputs']:\n",
+    "        lotr.generate_dtc_zip(set_id, set_name)\n",
+    "    if 'drivethrucards_7z' in conf['outputs']:\n",
+    "        lotr.generate_dtc_7z(set_id, set_name)"
    ]
   },
   {
