Finish multilanguage support

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -28,14 +28,18 @@
    "outputs": [],
    "source": [
     "for set_data in sets:\n",
-    "    set_id, _, set_row = set_data\n",
-    "    print('Processing set ID {}:'.format(set_id))\n",
-    "    lotr.backup_previous_xml(conf, set_id)\n",
-    "    lotr.generate_xml(conf, set_row)\n",
-    "    lotr.update_xml(conf, set_id)\n",
-    "    lotr.calculate_hashes(set_id)\n",
-    "    lotr.copy_raw_images(conf, set_id)\n",
-    "    lotr.copy_xml(set_id)"
+    "    set_id, set_name, set_row = set_data\n",
+    "    if 'octgn' in conf['outputs']:\n",
+    "        lotr.generate_octgn_xml(conf, set_name, set_row)\n",
+    "\n",
+    "    for lang in conf['languages']:\n",
+    "        print('Processing set {} ({}):'.format(set_name, lang))\n",
+    "        lotr.backup_previous_xml(conf, set_id, lang)\n",
+    "        lotr.generate_xml(conf, set_id, set_row, lang)\n",
+    "        lotr.update_xml(conf, set_id, lang)\n",
+    "        lotr.calculate_hashes(set_id, lang)\n",
+    "        lotr.copy_raw_images(conf, set_id, lang)\n",
+    "        lotr.copy_xml(set_id, lang)"
    ]
   },
   {
@@ -66,32 +70,33 @@
    "source": [
     "for set_data in sets:\n",
     "    set_id, set_name, _ = set_data\n",
-    "    print('Processing set ID {}:'.format(set_id))\n",
-    "    skip_ids = lotr.get_skip_cards(set_id)\n",
+    "    for lang in conf['languages']:\n",
+    "        print('Processing set {} ({}):'.format(set_name, lang))\n",
+    "        skip_ids = lotr.get_skip_cards(set_id, lang)\n",
     "\n",
-    "    if 'db_octgn' in conf['outputs']:\n",
-    "        lotr.generate_jpg300_nobleed(set_id, skip_ids)\n",
-    "    if 'pdf' in conf['outputs']:\n",
-    "        lotr.generate_png300_pdf(conf, set_id, skip_ids)\n",
-    "    if 'makeplayingcards' in conf['outputs']:\n",
-    "        lotr.generate_png800_bleedmpc(conf, set_id, skip_ids)\n",
-    "    if 'drivethrucards' in conf['outputs']:\n",
-    "        lotr.generate_png300_bleeddtc(conf, set_id, skip_ids)\n",
+    "        if 'db_octgn' in conf['outputs']:\n",
+    "            lotr.generate_jpg300_nobleed(set_id, lang, skip_ids)\n",
+    "        if 'pdf' in conf['outputs']:\n",
+    "            lotr.generate_png300_pdf(conf, set_id, lang, skip_ids)\n",
+    "        if 'makeplayingcards' in conf['outputs']:\n",
+    "            lotr.generate_png800_bleedmpc(conf, set_id, lang, skip_ids)\n",
+    "        if 'drivethrucards' in conf['outputs']:\n",
+    "            lotr.generate_png300_bleeddtc(conf, set_id, lang, skip_ids)\n",
     "\n",
-    "    if 'db' in conf['outputs']:\n",
-    "        lotr.generate_db(set_id, set_name)\n",
-    "    if 'octgn' in conf['outputs']:\n",
-    "        lotr.generate_octgn(set_id)\n",
-    "    if 'pdf' in conf['outputs']:\n",
-    "        lotr.generate_pdf(set_id, set_name)\n",
-    "    if 'makeplayingcards_zip' in conf['outputs']:\n",
-    "        lotr.generate_mpc_zip(set_id, set_name)\n",
-    "    if 'makeplayingcards_7z' in conf['outputs']:\n",
-    "        lotr.generate_mpc_7z(set_id, set_name)\n",
-    "    if 'drivethrucards_zip' in conf['outputs']:\n",
-    "        lotr.generate_dtc_zip(set_id, set_name)\n",
-    "    if 'drivethrucards_7z' in conf['outputs']:\n",
-    "        lotr.generate_dtc_7z(set_id, set_name)"
+    "        if 'db' in conf['outputs']:\n",
+    "            lotr.generate_db(set_id, set_name, lang)\n",
+    "        if 'octgn' in conf['outputs']:\n",
+    "            lotr.generate_octgn(set_id, set_name, lang)\n",
+    "        if 'pdf' in conf['outputs']:\n",
+    "            lotr.generate_pdf(set_id, set_name, lang)\n",
+    "        if 'makeplayingcards_zip' in conf['outputs']:\n",
+    "            lotr.generate_mpc_zip(set_id, set_name, lang)\n",
+    "        if 'makeplayingcards_7z' in conf['outputs']:\n",
+    "            lotr.generate_mpc_7z(set_id, set_name, lang)\n",
+    "        if 'drivethrucards_zip' in conf['outputs']:\n",
+    "            lotr.generate_dtc_zip(set_id, set_name, lang)\n",
+    "        if 'drivethrucards_7z' in conf['outputs']:\n",
+    "            lotr.generate_dtc_7z(set_id, set_name, lang)"
    ]
   },
   {
@@ -100,12 +105,11 @@
    "source": [
     "Now there should be the following outputs:\n",
     "\n",
-    "- `Output/DB/<set name>/`: 300 dpi JPG images for general purposes.\n",
-    "- `Output/MakePlayingCards/<set name>`: `zip` and `7z` archives of 800 dpi PNG images\n",
-    "   to be printed on MakePlayingCards.com.\n",
-    "- `Output/OCTGN/<octgnid>/:` `set.xml` and `o8c` image pack (300 dpi JPG) for OCTGN.\n",
-    "   Add the latter using the \"Add Image Packs\" button from within OCTGN.\n",
-    "- `Output/PDF/<set name>/`: PDF files in `A4` and `letter` format for home printing."
+    "- `Output/OCTGN/<set name>/`: `<octgn id>/set.xml` and `<set name>.<language>.o8c` image packs for OCTGN (300 dpi JPG).\n",
+    "- `Output/DB/<set name>.<language>/`: 300 dpi JPG images for general purposes.\n",
+    "- `Output/PDF/<set name>.<language>/`: PDF files in `A4` and `letter` format for home printing.\n",
+    "- `Output/DriveThruCards/<set name>.<language>/`: `zip` and `7z` archives of 300 dpi PNG images to be printed on DriveThruCards.com.\n",
+    "- `Output/MakePlayingCards/<set name>.<language>/`: `zip` and `7z` archives of 800 dpi PNG images to be printed on MakePlayingCards.com."
    ]
   }
  ],
