--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -89,14 +89,10 @@
     "            lotr.generate_octgn(set_id, set_name, lang)\n",
     "        if 'pdf' in conf['outputs']:\n",
     "            lotr.generate_pdf(set_id, set_name, lang)\n",
-    "        if 'makeplayingcards_zip' in conf['outputs']:\n",
-    "            lotr.generate_mpc_zip(set_id, set_name, lang)\n",
-    "        if 'makeplayingcards_7z' in conf['outputs']:\n",
-    "            lotr.generate_mpc_7z(set_id, set_name, lang)\n",
-    "        if 'drivethrucards_zip' in conf['outputs']:\n",
-    "            lotr.generate_dtc_zip(set_id, set_name, lang)\n",
-    "        if 'drivethrucards_7z' in conf['outputs']:\n",
-    "            lotr.generate_dtc_7z(set_id, set_name, lang)"
+    "        if 'makeplayingcards' in conf['outputs']:\n",
+    "            lotr.generate_mpc(conf, set_id, set_name, lang)\n",
+    "        if 'drivethrucards' in conf['outputs']:\n",
+    "            lotr.generate_dtc(conf, set_id, set_name, lang)"
    ]
   },
   {
