--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -6,7 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lotr"
+    "import logging\n",
+    "import lotr\n",
+    "\n",
+    "logging.basicConfig(level=logging.INFO, format='%(asctime)s: %(message)s')"
    ]
   },
   {
@@ -33,13 +36,12 @@
     "        lotr.generate_octgn_xml(conf, set_name, set_row)\n",
     "\n",
     "    for lang in conf['languages']:\n",
-    "        print('Processing set {} ({}):'.format(set_name, lang))\n",
-    "        lotr.backup_previous_xml(conf, set_id, lang)\n",
-    "        lotr.generate_xml(conf, set_id, set_row, lang)\n",
-    "        lotr.update_xml(conf, set_id, lang)\n",
-    "        lotr.calculate_hashes(set_id, lang)\n",
-    "        lotr.copy_raw_images(conf, set_id, lang)\n",
-    "        lotr.copy_xml(set_id, lang)"
+    "        lotr.backup_previous_xml(conf, set_id, set_name, lang)\n",
+    "        lotr.generate_xml(conf, set_id, set_name, set_row, lang)\n",
+    "        lotr.update_xml(conf, set_id, set_name, lang)\n",
+    "        lotr.calculate_hashes(set_id, set_name, lang)\n",
+    "        lotr.copy_raw_images(conf, set_id, set_name, lang)\n",
+    "        lotr.copy_xml(set_id, set_name, lang)"
    ]
   },
   {
@@ -71,27 +73,28 @@
     "for set_data in sets:\n",
     "    set_id, set_name, _ = set_data\n",
     "    for lang in conf['languages']:\n",
-    "        print('Processing set {} ({}):'.format(set_name, lang))\n",
-    "        skip_ids = lotr.get_skip_cards(set_id, lang)\n",
+    "        skip_ids = lotr.get_skip_cards(set_id, set_name, lang)\n",
     "\n",
     "        if 'db_octgn' in conf['outputs']:\n",
-    "            lotr.generate_jpg300_nobleed(set_id, lang, skip_ids)\n",
-    "        if 'pdf' in conf['outputs']:\n",
-    "            lotr.generate_png300_pdf(conf, set_id, lang, skip_ids)\n",
-    "        if 'makeplayingcards' in conf['outputs']:\n",
-    "            lotr.generate_png800_bleedmpc(conf, set_id, lang, skip_ids)\n",
-    "        if 'drivethrucards' in conf['outputs']:\n",
-    "            lotr.generate_jpg300_bleeddtc(conf, set_id, lang, skip_ids)\n",
+    "            lotr.generate_jpg300_nobleed(set_id, set_name, lang, skip_ids)\n",
+    "            if 'db' in conf['outputs']:\n",
+    "                lotr.generate_db(set_id, set_name, lang)\n",
+    "            if 'octgn' in conf['outputs']:\n",
+    "                lotr.generate_octgn(set_id, set_name, lang)\n",
     "\n",
-    "        if 'db' in conf['outputs']:\n",
-    "            lotr.generate_db(set_id, set_name, lang)\n",
-    "        if 'octgn' in conf['outputs']:\n",
-    "            lotr.generate_octgn(set_id, set_name, lang)\n",
     "        if 'pdf' in conf['outputs']:\n",
+    "            lotr.generate_png300_pdf(conf, set_id, set_name, lang,\n",
+    "                                     skip_ids)\n",
     "            lotr.generate_pdf(set_id, set_name, lang)\n",
+    "\n",
     "        if 'makeplayingcards' in conf['outputs']:\n",
+    "            lotr.generate_png800_bleedmpc(conf, set_id, set_name, lang,\n",
+    "                                          skip_ids)\n",
     "            lotr.generate_mpc(conf, set_id, set_name, lang)\n",
+    "\n",
     "        if 'drivethrucards' in conf['outputs']:\n",
+    "            lotr.generate_jpg300_bleeddtc(conf, set_id, set_name, lang,\n",
+    "                                          skip_ids)\n",
     "            lotr.generate_dtc(conf, set_id, set_name, lang)"
    ]
   },
